tests/NormalTests/paczka1/fuzzy1/22597593.err
Error in line 1: S990 A131 53,1
Error in line 13: 1qQMCOAv A131 26,96
Error in line 11: 1qQMCOAv S990 56,0
Error in line 16: 3U4 S727 93,1
Error in line 19: 1qQMCOAv A131 101,1
